package com.dmm.bootcamp.yatter2023.ui.post

data class PostBindingModel(
    val avatarUrl: String?,
    val statusText: String,
)